// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup /> (v2) Default story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="button-group button-group--horizontal"
  >
    <button
      class="button button--layout-none button--primary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 1
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 2
      </span>
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> (v2) HorizontalProgressive story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="button-group button-group--horizontal-progressive"
  >
    <button
      class="button button--layout-none button--primary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 1
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 2
      </span>
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> (v2) HorizontalProgressiveTertiary story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="button-group button-group--horizontal-progressive"
  >
    <button
      class="button button--layout-none button--primary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Primary Button
      </span>
    </button>
    <button
      class="button button--layout-none button--tertiary button--lg button--variant-default -ml-size-2"
      type="button"
    >
      <span
        class="button__text"
      >
        Tertiary Button
      </span>
    </button>
  </div>
</div>
`;

exports[`<ButtonGroup /> (v2) Vertical story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="button-group button-group--vertical"
  >
    <button
      class="button button--layout-none button--primary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 1
      </span>
    </button>
    <button
      class="button button--layout-none button--secondary button--lg button--variant-default"
      type="button"
    >
      <span
        class="button__text"
      >
        Button 2
      </span>
    </button>
  </div>
</div>
`;
